--- a/.gitignore
+++ b/.gitignore
@@ -1502,3 +1502,5 @@ Xip Source/xboxdashdata.185ead00/waitcursor.xip/Tube05-FACES.xm
 Xip Source/xboxdashdata.185ead00/waitcursor.xip/Tube06-FACES.xm
 Xip Source/xboxdashdata.185ead00/waitcursor.xip/Tube07-FACES.xm
 Xip Source/xboxdashdata.185ead00/waitcursor.xip/Tube08-FACES.xm
+Xip Source/xboxdashdata.185ead00/*.xip/*.vb
+Xip Source/xboxdashdata.185ead00/*.xip/*.ib
