--- a/.gitignore
+++ b/.gitignore
@@ -1504,3 +1504,5 @@ Xip Source/xboxdashdata.185ead00/waitcursor.xip/Tube07-FACES.xm
 Xip Source/xboxdashdata.185ead00/waitcursor.xip/Tube08-FACES.xm
 Xip Source/xboxdashdata.185ead00/*.xip/*.vb
 Xip Source/xboxdashdata.185ead00/*.xip/*.ib
+Tools/Colour Patcher/Source/xbe file/
+Tools/Colour Patcher/Source/transfer to xbox/
