Add background meshes (dna)

--- a/Xip Source/UIX Configs/config.ini
+++ b/Xip Source/UIX Configs/config.ini
@@ -51,3 +51,10 @@ QuickLaunchA=E:\Dashboards\UnleashX\default.xbe
 QuickLaunchB=
 QuickLaunchX=
 QuickLaunchY=
+
+[BGMesh]
+Alpha=0.6
+BGMesh3 rpm=2
+BGMesh2 rpm=2
+BGMesh1 rpm=2
+BGMesh=dna
