Converted .xbx files to .ini files.
- Fixed Recent Titles bug. Now will not load Recent Tiles that are not in the cache.

--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -62,6 +62,7 @@ Animate Main Menu=Hauptmenü animieren
 Use tHc ScreenSaver=tHc Bildschirmschoner verwenden
 UIX Settings Icon=UIX-Einstellungssymbol
 Launcher Orb Icon=Startmenü-Kugel-Symbol
+Use List Underlay=Listenhintergrund verwenden
 Toggle Noisy Camera=Kamerabewegung ein/aus
 Rescan Partitions=Partitionen erneut scannen
 Main Menu=Hauptmenü
@@ -132,6 +133,7 @@ Animate Main Menu=Animer le menu principal
 Use tHc ScreenSaver=Utiliser l'écran de veille tHc
 UIX Settings Icon=Icône des paramètres d'UIX
 Launcher Orb Icon=Icône du menu Lanceur
+Use List Underlay=Activer l’arrière plan des liste
 Toggle Noisy Camera=Caméra à l'épaule
 Rescan Partitions=Réindexer les partitions
 Main Menu=Menu principal
@@ -202,6 +204,7 @@ Animate Main Menu=Menú principal de Animate
 Use tHc ScreenSaver=Usar salvapantallas tHc
 UIX Settings Icon=Icono de ajustes de UIX
 Launcher Orb Icon=Icono del orbe del lanzador
+Use List Underlay=Habilitar lista de fondo
 Toggle Noisy Camera=Activar movimiento de la cámara
 Rescan Partitions=Buscar particiones
 Main Menu=Menú principal
@@ -272,6 +275,7 @@ Animate Main Menu=Menu principale animato
 Use tHc ScreenSaver=Usa lo screensaver tHc
 UIX Settings Icon=Icona impostazioni UIX
 Launcher Orb Icon=Icona Orb del lanciatore
+Use List Underlay=Abilita sfondo elenco
 Toggle Noisy Camera=Fotocamera rumorosa
 Rescan Partitions=Riscansiona le partizioni
 Main Menu=Menu principale
@@ -360,6 +364,7 @@ Animate Main Menu=Menu principal animado
 Use tHc ScreenSaver=Use protetor de ecrã tHc
 UIX Settings Icon=Ícone de Definições UIX
 Launcher Orb Icon=Ícone do Orbe do Lançador
+Use List Underlay=Ativar fundos de lista
 Toggle Noisy Camera=Alternar Câmara Barulhenta
 Rescan Partitions=Verificar Novamente as Partições
 Main Menu=Menu Principal
