Xboxdash 5960 Colourizer:  - Updated the skin files to use the new images and also updated the colours.  - Updated to the latest partition patch.  - Updated the keyboard colour names to better reflect them.  - Updated the FTP function.  - Added a crystal skin. (basically the same as blacknwhite but with coloured buttons and orb)
Added an example batch file (Blue.bat) that will process a pre defined skin.
These are handy if you don't want to keep typing out file names.

Build UIX Lite Skins:
 - Updated to process the new skin images.
 - Added a build all batch file that will build all skin folders, this wont upload anything.
 - Added the new PSD files for the new skin files.
 - Minor additional changes to the main bat file.

--- a/Tools/Colour Patcher/Source/skins/blacknwhite.ini
+++ b/Tools/Colour Patcher/Source/skins/blacknwhite.ini
@@ -2,6 +2,15 @@
 colour=d5d5d5
 brightness=1.4
 [Override colours with your own]
+; Description: InnerWall_01 (transition)
+; Colour type: ARGB
+innerwall_01_transition=FFd5d5d5
+; Description: InnerWall_01
+; Colour type: ARGB
+innerwall_01=14d5d5d5
+; Description: InnerWall_02
+; Colour type: ARGB
+innerwall_02=14d5d5d5
 ; Description: NavType (Text)
 ; Colour type: RGB
 navtype=C9C9C9
@@ -20,3 +29,6 @@ egg_xboxgreen=C9C9C9
 ; Description: XBOXgreen (Sub Menu A/B lower text)
 ; Colour type: RGB
 egg_xboxgreen_sub=C9C9C9
+; Description: OrangeNavType
+; Colour type: RGB
+orangenavtype=C9C9C9
