--- a/Tools/Colour Patcher/Source/skins/blood red.ini
+++ b/Tools/Colour Patcher/Source/skins/blood red.ini
@@ -13,10 +13,13 @@ metal_chrome_1=E5E5E5
 metal_chrome_2=FFE5E5E5
 ; Description: Material #1335
 ; Colour type: ARGB
-material_#1335=40E9E9E9
+material_#1335=60E9E9E9
 ; Description: XBOXGreen (Main menu A/B lower text)
 ; Colour type: RGB
 egg_xboxgreen=C9C9C9
 ; Description: XBOXgreen (Sub Menu A/B lower text)
 ; Colour type: RGB
 egg_xboxgreen_sub=C9C9C9
+; Description: OrangeNavType
+; Colour type: RGB
+orangenavtype=C9C9C9
