--- a/Tools/Colour Patcher/Source/skins/blue.ini
+++ b/Tools/Colour Patcher/Source/skins/blue.ini
@@ -1,22 +1,34 @@
 [These are mandatory]
-colour=0000C9
+colour=1972c9
 brightness=0.9
 [Override colours with your own]
+; Description: InnerWall_01 (transition)
+; Colour type: ARGB
+innerwall_01_transition=FF1972c9
+; Description: InnerWall_01
+; Colour type: ARGB
+innerwall_01=141972c9
+; Description: InnerWall_02
+; Colour type: ARGB
+innerwall_02=141972c9
 ; Description: NavType (Text)
 ; Colour type: RGB
-navtype=C9C9C9
+navtype=888888
 ; Description: HilightedType
 ; Colour type: ARGB
-hilightedtype=FFE9E9E9
+hilightedtype=FFA9A9A9
 ; These keep the settings icons the correct look
-metal_chrome_1=E5E5E5
-metal_chrome_2=FFE5E5E5
+metal_chrome_1=A9A9A9
+metal_chrome_2=FFA9A9A9
 ; Description: Material #1335
 ; Colour type: ARGB
-material_#1335=40E9E9E9
+material_#1335=60A9A9A9
 ; Description: XBOXGreen (Main menu A/B lower text)
 ; Colour type: RGB
-egg_xboxgreen=C9C9C9
+egg_xboxgreen=888888
 ; Description: XBOXgreen (Sub Menu A/B lower text)
 ; Colour type: RGB
-egg_xboxgreen_sub=C9C9C9
+egg_xboxgreen_sub=888888
+; Description: OrangeNavType
+; Colour type: RGB
+orangenavtype=888888
