--- a/Tools/Colour Patcher/Source/skins/stock.ini
+++ b/Tools/Colour Patcher/Source/skins/stock.ini
@@ -1,5 +1,5 @@
 [These are mandatory]
-colour=FFFFFF
+colour=stock
 brightness=1.0
 [Override colours with your own]
 pulse_highlight=B2D000
@@ -7,11 +7,11 @@ pulsing_selection=FFFF80
 egg_button_press=FEFFBC
 kb_button_focus=B2D000
 kb_button_focus_highlight=FFB2D000
-kb_button_no_focus_highlight=FFF3FF6B
-kb_side_left_no_focus_buttons=19E100
+kb_button_large_no_focus_highlight=FFF3FF6B
+kb_button_large_no_focus=19E100
 kb_button_no_focus_highlight=DEF3FF6B
-kb_no_focus_button_back=14C000
-kb_no_focus_letters=BEFA5E
+kb_button_no_focus=14C000
+kb_letters_no_focus=BEFA5E
 innerwall_01_transition=FFF3FF6B
 innerwall_01=1428D414
 innerwall_02=1414C000
