--- a/Tools/Colour Patcher/Source/skins/denim.ini
+++ b/Tools/Colour Patcher/Source/skins/denim.ini
@@ -1,7 +1,16 @@
 [These are mandatory]
 colour=445389
-brightness=1.5
+brightness=1.0
 [Override colours with your own]
+; Description: InnerWall_01 (transition)
+; Colour type: ARGB
+innerwall_01_transition=FF445389
+; Description: InnerWall_01
+; Colour type: ARGB
+innerwall_01=14445389
+; Description: InnerWall_02
+; Colour type: ARGB
+innerwall_02=14445389
 ; Description: NavType (Text)
 ; Colour type: RGB
 navtype=C9C9C9
@@ -20,3 +29,6 @@ egg_xboxgreen=C9C9C9
 ; Description: XBOXgreen (Sub Menu A/B lower text)
 ; Colour type: RGB
 egg_xboxgreen_sub=C9C9C9
+; Description: OrangeNavType
+; Colour type: RGB
+orangenavtype=C9C9C9
