--- a/Tools/Colour Patcher/Source/skins/purple.ini
+++ b/Tools/Colour Patcher/Source/skins/purple.ini
@@ -2,6 +2,15 @@
 colour=9c1aff
 brightness=0.95
 [Override colours with your own]
+; Description: InnerWall_01 (transition)
+; Colour type: ARGB
+innerwall_01_transition=FF9c1aff
+; Description: InnerWall_01
+; Colour type: ARGB
+innerwall_01=149c1aff
+; Description: InnerWall_02
+; Colour type: ARGB
+innerwall_02=149c1aff
 ; Description: NavType (Text)
 ; Colour type: RGB
 navtype=C9C9C9
@@ -13,10 +22,13 @@ metal_chrome_1=E5E5E5
 metal_chrome_2=FFE5E5E5
 ; Description: Material #1335
 ; Colour type: ARGB
-material_#1335=40E9E9E9
+material_#1335=60E9E9E9
 ; Description: XBOXGreen (Main menu A/B lower text)
 ; Colour type: RGB
 egg_xboxgreen=C9C9C9
 ; Description: XBOXgreen (Sub Menu A/B lower text)
 ; Colour type: RGB
 egg_xboxgreen_sub=C9C9C9
+; Description: OrangeNavType
+; Colour type: RGB
+orangenavtype=C9C9C9
