--- a/Tools/Colour Patcher/Source/skins/sky.ini
+++ b/Tools/Colour Patcher/Source/skins/sky.ini
@@ -2,6 +2,15 @@
 colour=77b5fe
 brightness=0.95
 [Override colours with your own]
+; Description: InnerWall_01 (transition)
+; Colour type: ARGB
+innerwall_01_transition=FF66adff
+; Description: InnerWall_01
+; Colour type: ARGB
+innerwall_01=1466adff
+; Description: InnerWall_02
+; Colour type: ARGB
+innerwall_02=1477b5fe
 ; Description: NavType (Text)
 ; Colour type: RGB
 navtype=C9C9C9
@@ -20,12 +29,6 @@ egg_xboxgreen=C9C9C9
 ; Description: XBOXgreen (Sub Menu A/B lower text)
 ; Colour type: RGB
 egg_xboxgreen_sub=C9C9C9
-; Description: InnerWall_01 (transition)
-; Colour type: ARGB
-innerwall_01_transition=FF66adff
-; Description: InnerWall_01
-; Colour type: ARGB
-innerwall_01=1466adff
-; Description: InnerWall_02
-; Colour type: ARGB
-innerwall_02=14294ccc
+; Description: OrangeNavType
+; Colour type: RGB
+orangenavtype=C9C9C9
