--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -11,15 +11,18 @@ MUSIC=Music
 LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
 SETTINGS_CHANGED=You will need to reload before the new settings will take effect.\n\nWould you like to reload now?
 POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
+Use List Underlay=Use List Backing
 
 [JAPANESE]
 ### CJK Characters Not Supported Yet ###
 LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
 SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
 POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
@@ -29,13 +32,17 @@ MEMORY=Speicher
 MUSIC=Musik
 INSIGNIA=Insignia
 LAUNCHER=Launcher
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Die erweiterten Partitionen der Festplatte werden indiziert. Dies kann einige Sekunden dauern.\n\nBitte warten...
 SETTINGS_CHANGED=Es muss ein Neustart durchgeführt werden, bevor die neuen Einstellungen wirksam werden.\n\nJetzt einen Neustart durchführen?
 POWER_OFF=Dadurch wird die Xbox ausgeschaltet.\n\nFortfahren?
 ###Launcher###
+REFRESH=AKTUALISIEREN
+RECENT=ZULETZT GESPIELT
 Recent Titles=Zuletzt gespielte Titel
 Title=Titel
 Titles=Titel
+File Browser=
 ###Settings###
 CONFIGURATION=UIX-Einstellungen
 Manage Saved Games=Gespeicherte Spiele
@@ -100,13 +107,17 @@ MEMORY=Mémoire
 MUSIC=Musique
 INSIGNIA=Insignia
 LAUNCHER=Lanceur
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Indexation des partitions étendues du disque dur. Cette opération peut prendre plusieurs secondes.\nVeuillez patienter...
 SETTINGS_CHANGED=Vous devrez redémarrer avant que les nouveaux paramètres prennent effet.\nVoulez-vous redémarrer maintenant ?
 POWER_OFF=Cela va éteindre la Xbox.\nVoulez-vous continuer ?
 ###Launcher###
+REFRESH=RAFRAÎCHIR
+RECENT=RÉCENTS
 Recent Titles=Éléments récents
 Title=Élément
 Titles=Éléments
+File Browser=
 ###Settings###
 CONFIGURATION=Paramètres d'UIX
 Manage Saved Games=Gérer vos sauvegardes
@@ -171,13 +182,17 @@ MEMORY=Memoria
 MUSIC=Música
 INSIGNIA=Insignia
 LAUNCHER=Lanzador
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Indexando las particiones del disco duro. Puede que lleve algún tiempo.\n\nEspere por favor...
 SETTINGS_CHANGED=Debe reiniciar para que los nuevos ajustes se apliquen.\n\n¿Quiere reiniciar ahora?
 POWER_OFF=Esto apagará la Xbox.\n\n¿Desea continuar?
 ###Launcher###
+REFRESH=REFRESCAR
+RECENT=RECIENTES
 Recent Titles=Elementos recientes 
 Title=Título
 Titles=Títulos
+File Browser=
 ###Settings###
 CONFIGURATION=Ajustes de UIX
 Reboot=Reiniciar
@@ -242,13 +257,17 @@ MEMORY=Memoria
 MUSIC=Musica
 INSIGNIA=Insignia
 LAUNCHER=Lanciatore
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Indicizzazione delle partizioni estese del disco rigido. Potrebbero volerci alcuni secondi. \n\nAttendi...
 SETTINGS_CHANGED=Sarà necessario riavviare affinché le nuove impostazioni abbiano effetto.\n\nVuoi riavviare ora?
 POWER_OFF=Questo spegnerà la tua Xbox.\n\nVuoi continuare?
 ###Launcher###
+REFRESH=AGGIORNARE
+RECENT=RECENTI
 Recent Titles=Titoli recenti
 Title=Titolo
 Titles=Titoli
+File Browser=
 ###Settings###
 CONFIGURATION=Impostazioni UIX
 Manage Saved Games=Gestisci i giochi salvati
@@ -313,6 +332,7 @@ Advanced Mode=Modalità avanzata
 LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
 SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
 POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
@@ -322,6 +342,7 @@ POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
 LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
 SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
 POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
@@ -331,13 +352,17 @@ MEMORY=Memória
 MUSIC=Música
 INSIGNIA=Insignia
 LAUNCHER=Lançador
+ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
 INDEXING_PARTITION=Indexação de partições estendidas do disco rígido. Isto pode demorar alguns segundos. \n\nPor favor aguarde...
 SETTINGS_CHANGED=Terá de reiniciar antes que as novas definições entrem em vigor. \n\nDeseja reiniciar agora?
 POWER_OFF=Isto desligará o seu Xbox. \n\nDeseja continuar?
 ###Launcher###
+REFRESH=ATUALIZAR
+RECENT=RECENTES
 Recent Titles=Títulos Recentes
 Title=Título
 Titles=Títulos
+File Browser=
 ###Settings###
 CONFIGURATION=Configurações UIX
 Manage Saved Games=Gerir Jogos Guardados
