--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -12,6 +12,10 @@ LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
 SETTINGS_CHANGED=You will need to reload before the new settings will take effect.\n\nWould you like to reload now?
 POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
@@ -23,6 +27,10 @@ LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
 SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
 POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
@@ -33,6 +41,10 @@ MUSIC=Musik
 INSIGNIA=Insignia
 LAUNCHER=Launcher
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Die erweiterten Partitionen der Festplatte werden indiziert. Dies kann einige Sekunden dauern.\n\nBitte warten...
 SETTINGS_CHANGED=Es muss ein Neustart durchgeführt werden, bevor die neuen Einstellungen wirksam werden.\n\nJetzt einen Neustart durchführen?
 POWER_OFF=Dadurch wird die Xbox ausgeschaltet.\n\nFortfahren?
@@ -108,6 +120,10 @@ MUSIC=Musique
 INSIGNIA=Insignia
 LAUNCHER=Lanceur
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Indexation des partitions étendues du disque dur. Cette opération peut prendre plusieurs secondes.\nVeuillez patienter...
 SETTINGS_CHANGED=Vous devrez redémarrer avant que les nouveaux paramètres prennent effet.\nVoulez-vous redémarrer maintenant ?
 POWER_OFF=Cela va éteindre la Xbox.\nVoulez-vous continuer ?
@@ -183,6 +199,10 @@ MUSIC=Música
 INSIGNIA=Insignia
 LAUNCHER=Lanzador
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Indexando las particiones del disco duro. Puede que lleve algún tiempo.\n\nEspere por favor...
 SETTINGS_CHANGED=Debe reiniciar para que los nuevos ajustes se apliquen.\n\n¿Quiere reiniciar ahora?
 POWER_OFF=Esto apagará la Xbox.\n\n¿Desea continuar?
@@ -258,6 +278,10 @@ MUSIC=Musica
 INSIGNIA=Insignia
 LAUNCHER=Lanciatore
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Indicizzazione delle partizioni estese del disco rigido. Potrebbero volerci alcuni secondi. \n\nAttendi...
 SETTINGS_CHANGED=Sarà necessario riavviare affinché le nuove impostazioni abbiano effetto.\n\nVuoi riavviare ora?
 POWER_OFF=Questo spegnerà la tua Xbox.\n\nVuoi continuare?
@@ -333,6 +357,10 @@ LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
 SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
 POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
@@ -343,6 +371,10 @@ LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
 SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
 POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
@@ -353,6 +385,10 @@ MUSIC=Música
 INSIGNIA=Insignia
 LAUNCHER=Lançador
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
+AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
+AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
+AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
 INDEXING_PARTITION=Indexação de partições estendidas do disco rígido. Isto pode demorar alguns segundos. \n\nPor favor aguarde...
 SETTINGS_CHANGED=Terá de reiniciar antes que as novas definições entrem em vigor. \n\nDeseja reiniciar agora?
 POWER_OFF=Isto desligará o seu Xbox. \n\nDeseja continuar?
