Added missing files to uix_settings.xip

--- a/Xip Source/UIX Configs/config.ini
+++ b/Xip Source/UIX Configs/config.ini
@@ -5,6 +5,8 @@ ConfigPanelIcon=Globe
 LauncherOrbIcon=Xbox
 UseMainMenuAttract=false
 UsetHcScreenSaver=true
+UseListUnderlay=false
+AutoLaunchMedia=false
 
 [MainMenu]
 MainMenuItems=5
