--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -1,5 +1,5 @@
 ###############################################################################################
-#  Use ANSI encoding. \n {NewLine} and \t {Tab} are supported.								  #
+#  Use ANSI encoding. \n {NewLine}, \t {Tab}, and \uXXXX {unicode} are supported.			  #
 #  Use Title case for buttons and labels. Use Sentence case for dialogs and popups messages.  #
 #  Matchwords in uppercase ignore case when matching.										  #
 #  Translations may need to be condensed or abbreviated to fit in the allotted space.		  #
@@ -23,7 +23,7 @@ Use List Underlay=Use List Backing
 
 [JAPANESE]
 ### CJK Characters Not Supported Yet ###
-LAUNCHER=Launcher
+LAUNCHER=\u30e9\u30f3\u30c1\u30e3\u30fc
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
 ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
