--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -3,6 +3,7 @@
 #  Use Title case for buttons and labels. Use Sentence case for dialogs and popups messages.  #
 #  Matchwords in uppercase ignore case when matching.                                         #
 #  Translations may need to be condensed or abbreviated to fit in the allotted space.         #
+#  
 ###############################################################################################
 
 [ENGLISH]
@@ -39,11 +40,11 @@ MEMORY=Speicher
 MUSIC=Musik
 INSIGNIA=Insignia
 LAUNCHER=Launcher
-ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
-AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
-AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
-AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
-AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
+ASSIGNED_QUICKLAUNCH=Element wurde für Schnellstart ausgewählt.
+AUTOLAUNCH_AUDIO_ASK=\nAudio-CD wurde eingelegt.\n\nAudio abspielen?
+AUTOLAUNCH_VIDEO_ASK=\nDVD-Film wurde eingelegt.\n\nFilm abspielen?
+AUTOLAUNCH_TITLE_ASK=\nXbox-Spiel wurde eingelegt.\n\nSpiel Starten?
+AUTOLAUNCH_UNKN_ASK=\nUnbekannte Disc wurde eingelegt.\n\nTrotzdem starten??
 INDEXING_PARTITION=Die erweiterten Partitionen der Festplatte werden indiziert. Dies kann einige Sekunden dauern.\n\nBitte warten...
 SETTINGS_CHANGED=Es muss ein Neustart durchgeführt werden, bevor die neuen Einstellungen wirksam werden.\n\nJetzt einen Neustart durchführen?
 POWER_OFF=Dadurch wird die Xbox ausgeschaltet.\n\nFortfahren?
@@ -53,12 +54,12 @@ RECENT=ZULETZT GESPIELT
 Recent Titles=Zuletzt gespielte Titel
 Title=Titel
 Titles=Titel
-File Browser=
+File Browser=Dateimanager
 ###Settings###
 CONFIGURATION=UIX-Einstellungen
 Manage Saved Games=Gespeicherte Spiele
-Play Your Music=Spielen Sie Ihre Musik
-Launch a Title=Starte ein Titel
+Play Your Music=Musik abspielen
+Launch a Title=Titel Starten
 Configure UIX Settings=UIX-Einstellungen ändern
 Play Online=Online Spielen
 Reboot Xbox=Xbox neu starten
@@ -70,22 +71,22 @@ TRUE=JA
 FALSE=NEIN
 NONE=KEINE
 NOTHING=NICHTS
-Globe=Weltkugel
+Globe=Globus
 Console=Konsole
 Stock=Standard
-General Settings=Allg. Einstellungen
-Main Orb Style=Startmenü-Kugel-Stil
+General Settings=Allgemein
+Main Orb Style=Stil der Startmenü-Kugel
 Show Insignia=Insignia anzeigen
 Animate Main Menu=Hauptmenü animieren
 Use tHc ScreenSaver=tHc Bildschirmschoner verwenden
-UIX Settings Icon=UIX-Einstellungssymbol
-Launcher Orb Icon=Startmenü-Kugel-Symbol
+UIX Settings Icon=Symbol in UIX-Einstellungen
+Launcher Orb Icon=Symbol im Launcher
 Use List Underlay=Listenhintergrund verwenden
 Toggle Noisy Camera=Kamerabewegung ein/aus
 Rescan Partitions=Partitionen erneut scannen
 Main Menu=Hauptmenü
 Launcher Menu=Launcher-Menü
-Show in Settings=Einstellungsoptionen
+Show in Settings=In Einstellungen anzeigen
 Quick Launch=Schnellstart
 Change Displayed Name of Titles=Angezeigten Titelnamen ändern
 Change Title Names=Titelnamen ändern
