--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -3,7 +3,7 @@
 #  Use Title case for buttons and labels. Use Sentence case for dialogs and popups messages.  #
 #  Matchwords in uppercase ignore case when matching.                                         #
 #  Translations may need to be condensed or abbreviated to fit in the allotted space.         #
-#  
+#  Here is a online tool to encode text into unicode -> https://checkserp.com/encode/unicode/ #
 ###############################################################################################
 
 [ENGLISH]
