--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -23,17 +23,87 @@ POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
 Use List Underlay=Use List Backing
 
 [JAPANESE]
+MEMORY=\u30e1\u30e2\u30ea\u30fc
+MUSIC=\u30df\u30e5\u30fc\u30b8\u30c3\u30af
 LAUNCHER=\u30e9\u30f3\u30c1\u30e3\u30fc
 INSIGNIA=Insignia
-CONFIGURATION=UIX Settings
-ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
-AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
-AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
-AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
-AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
-INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
-SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
-POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
+CONFIGURATION=UIX \u8a2d\u5b9a
+ASSIGNED_QUICKLAUNCH=\u9078\u629e\u3057\u305f\u30a2\u30a4\u30c6\u30e0\u3092QuickLaunch\u306b\u5272\u308a\u5f53\u3066\u307e\u3057\u305f
+AUTOLAUNCH_AUDIO_ASK=\n\u97f3\u697dCD\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u518d\u751f\u3057\u307e\u3059\u304b?
+AUTOLAUNCH_VIDEO_ASK=\nDVD\u6620\u753b\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u518d\u751f\u3057\u307e\u3059\u304b?
+AUTOLAUNCH_TITLE_ASK=\nXbox\u30bf\u30a4\u30c8\u30eb\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u8d77\u52d5\u3057\u307e\u3059\u304b?
+AUTOLAUNCH_UNKN_ASK=\n\u4e0d\u660e\u306a\u30c7\u30a3\u30b9\u30af\u30bf\u30a4\u30d7\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u8d77\u52d5\u3057\u3066\u78ba\u8a8d\u3057\u307e\u3059\u304b?
+INDEXING_PARTITION=\u30cf\u30fc\u30c9\u30c7\u30a3\u30b9\u30af\u306e\u62e1\u5f35\u30d1\u30fc\u30c6\u30a3\u30b7\u30e7\u30f3\u3092\u30a4\u30f3\u30c7\u30c3\u30af\u30b9\u4e2d\u3067\u3059\u3002\u6570\u79d2\u9593\u304b\u304b\u308b\u5834\u5408\u304c\u3042\u308a\u307e\u3059\u3002\n\n\u304a\u5f85\u3061\u304f\u3060\u3055\u3044...
+SETTINGS_CHANGED=\u8a2d\u5b9a\u3092\u6700\u65b0\u306e\u72b6\u614b\u306b\u3059\u308b\u305f\u3081\u306b\u518d\u8aad\u8fbc\u307f\u304c\u5fc5\u8981\u3067\u3059\u3002\n\n\u73fe\u5728\u518d\u8aad\u8fbc\u307f\u3057\u307e\u3059\u304b?
+POWER_OFF=Xbox\u3092\u96fb\u6e90\u5207\u65ad\u3057\u307e\u3059\u3002\n\n\u7d9a\u884c\u3057\u307e\u3059\u304b?
+###Launcher###
+REFRESH=\u66f4\u65b0
+RECENT=\u6700\u65b0
+Recent Titles=\u6700\u8fd1\u306e\u30bf\u30a4\u30c8\u30eb
+Title=\u30bf\u30a4\u30c8\u30eb
+Titles=\u30bf\u30a4\u30c8\u30eb
+File Browser=\u30d5\u30a1\u30a4\u30eb\u30d6\u30e9\u30a6\u30b6
+Start FTP Server=FTP\u30b5\u30fc\u30d0\u30fc\u3092\u958b\u59cb
+###Settings###
+CONFIGURATION=UIX \u8a2d\u5b9a
+Manage Saved Games=\u30bb\u30fc\u30d6\u30c7\u30fc\u30bf\u306e\u7ba1\u7406
+Play Your Music=\u30df\u30e5\u30fc\u30b8\u30c3\u30af\u3092\u518d\u751f
+Launch a Title=\u30bf\u30a4\u30c8\u30eb\u3092\u8d77\u52d5
+Configure UIX Settings=UIX\u8a2d\u5b9a\u3092\u69cb\u6210
+Play Online=\u30aa\u30f3\u30e9\u30a4\u30f3\u30d7\u30ec\u30a4
+Reboot Xbox=Xbox\u3092\u518d\u8d77\u52d5
+Shutdown Xbox=Xbox\u3092\u7d42\u4e86
+Reboot=\u518d\u8d77\u52d5
+Shutdown=\u7d42\u4e86
+###UIX Settings###
+TRUE=true
+FALSE=false
+NONE=none
+NOTHING=nothing
+Globe=\u5730\u7403
+Console=\u30b3\u30f3\u30bd\u30fc\u30eb
+Stock=\u30b9\u30c8\u30c3\u30af
+General Settings=\u5168\u822c\u8a2d\u5b9a
+Main Orb Style=\u30e1\u30a4\u30f3\u30aa\u30fc\u30d6\u30b9\u30bf\u30a4\u30eb
+Show Insignia=\u30a4\u30f3\u30b7\u30b0\u30cb\u30a2\u3092\u8868\u793a
+Animate Main Menu=\u30e1\u30a4\u30f3\u30e1\u30cb\u30e5\u30fc\u306b\u52d5\u304d\u3092\u4ed8\u3051\u308b
+Auto-Launch Media=\u81ea\u52d5\u8d77\u52d5\u30e1\u30c7\u30a3\u30a2
+Use tHc ScreenSaver=tHc\u30b9\u30af\u30ea\u30fc\u30f3\u30bb\u30fc\u30d0\u30fc\u3092\u4f7f\u7528
+UIX Settings Icon=UIX\u8a2d\u5b9a\u30a2\u30a4\u30b3\u30f3
+Launcher Orb Icon=\u30e9\u30f3\u30c1\u30e3\u30fc\u30aa\u30fc\u30d6\u30a2\u30a4\u30b3\u30f3
+Use List Underlay=\u30ea\u30b9\u30c8\u306e\u80cc\u666f\u3092\u4f7f\u7528
+Toggle Noisy Camera=\u30ce\u30a4\u30ba\u30ab\u30e1\u30e9\u3092\u5207\u308a\u66ff\u3048
+Rescan Partitions=\u30d1\u30fc\u30c6\u30a3\u30b7\u30e7\u30f3\u3092\u518d\u30b9\u30ad\u30e3\u30f3
+Main Menu=\u30e1\u30a4\u30f3\u30e1\u30cb\u30e5\u30fc 
+Launcher Menu=\u30e9\u30f3\u30c1\u30e3\u30fc\u30e1\u30cb\u30e5\u30fc 
+Show in Settings=\u8a2d\u5b9a\u306b\u8868\u793a
+Quick Launch=\u30af\u30a4\u30c3\u30af\u8d77\u52d5
+Change Displayed Name of Titles=\u8868\u793a\u3055\u308c\u308b\u30bf\u30a4\u30c8\u30eb\u540d\u3092\u5909\u66f4
+Change Title Names=\u30bf\u30a4\u30c8\u30eb\u540d\u3092\u5909\u66f4
+Main Menu Items=\u30e1\u30a4\u30f3\u30e1\u30cb\u30e5\u30fc\u9805\u76ee
+Item 1 Title=1\u756a\u76ee\u306e\u30bf\u30a
+Item 1 Title=\u30A2\u30A4\u30C6\u30E0 1 \u30BF\u30A4\u30C8\u30EB
+Item 1 Action=\u30A2\u30A4\u30C6\u30E0 1 \u64CD\u4F5C
+Item 1 Path=\u30A2\u30A4\u30C6\u30E0 1 \u30D1\u30B9
+Item 2 Title=\u30A2\u30A4\u30C6\u30E0 2 \u30BF\u30A4\u30C8\u30EB
+Item 2 Action=\u30A2\u30A4\u30C6\u30E0 2 \u64CD\u4F5C
+Item 2 Path=\u30A2\u30A4\u30C6\u30E0 2 \u30D1\u30B9
+Item 3 Title=\u30A2\u30A4\u30C6\u30E0 3 \u30BF\u30A4\u30C8\u30EB
+Item 3 Action=\u30A2\u30A4\u30C6\u30E0 3 \u64CD\u4F5C
+Item 3 Path=\u30A2\u30A4\u30C6\u30E0 3 \u30D1\u30B9
+Item 4 Title=\u30A2\u30A4\u30C6\u30E0 4 \u30BF\u30A4\u30C8\u30EB
+Item 4 Action=\u30A2\u30A4\u30C6\u30E0 4 \u64CD\u4F5C
+Item 4 Path=\u30A2\u30A4\u30C6\u30E0 4 \u30D1\u30B9
+Item 5 Title=\u30A2\u30A4\u30C6\u30E0 5 \u30BF\u30A4\u30C8\u30EB
+Item 5 Path=\u30A2\u30A4\u30C6\u30E0 5 \u30D1\u30B9
+Item 6 Title=\u30A2\u30A4\u30C6\u30E0 6 \u30BF\u30A4\u30C8\u30EB
+Item 6 Path=\u30A2\u30A4\u30C6\u30E0 6 \u30D1\u30B9
+Item 7 Title=\u30A2\u30A4\u30C6\u30E0 7 \u30BF\u30A4\u30C8\u30EB
+Item 7 Path=\u30A2\u30A4\u30C6\u30E0 7 \u30D1\u30B9
+Item 8 Title=\u30A2\u30A4\u30C6\u30E0 8 \u30BF\u30A4\u30C8\u30EB
+Item 8 Path=\u30A2\u30A4\u30C6\u30E0 8 \u30D1\u30B9
+YX Button Action=YX\u30DC\u30BF\u30F3\u64CD\u4F5C
+Advanced Mode=\u9AD8\u5EA6\u30E2\u30FC\u30C9
 
 [DEUTSCH]
 MEMORY=Speicher
@@ -55,6 +125,7 @@ Recent Titles=Zuletzt gespielte Titel
 Title=Titel
 Titles=Titel
 File Browser=Dateimanager
+Start FTP Server=FTP-Server starten
 ###Settings###
 CONFIGURATION=UIX-Einstellungen
 Manage Saved Games=Gespeicherte Spiele
@@ -78,6 +149,7 @@ General Settings=Allgemein
 Main Orb Style=Stil der Startmenü-Kugel
 Show Insignia=Insignia anzeigen
 Animate Main Menu=Hauptmenü animieren
+Auto-Launch Media=Medien automatisch starten
 Use tHc ScreenSaver=tHc Bildschirmschoner verwenden
 UIX Settings Icon=Symbol in UIX-Einstellungen
 Launcher Orb Icon=Symbol im Launcher
@@ -133,7 +205,8 @@ RECENT=RÉCENTS
 Recent Titles=Éléments récents
 Title=Élément
 Titles=Éléments
-File Browser=
+File Browser=Explorateur de fichiers
+Start FTP Server=Démarrer le serveur FTP
 ###Settings###
 CONFIGURATION=Paramètres d'UIX
 Manage Saved Games=Gérer vos sauvegardes
@@ -157,6 +230,7 @@ General Settings=Réglages généraux
 Main Orb Style=Style de la sphère principale
 Show Insignia=Afficher Insignia
 Animate Main Menu=Animer le menu principal
+Auto-Launch Media=Lancement automatique des médias
 Use tHc ScreenSaver=Utiliser l'écran de veille tHc
 UIX Settings Icon=Icône des paramètres d'UIX
 Launcher Orb Icon=Icône du menu Lanceur
@@ -212,7 +286,8 @@ RECENT=RECIENTES
 Recent Titles=Elementos recientes 
 Title=Título
 Titles=Títulos
-File Browser=
+File Browser=Explorador de archivos
+Start FTP Server=Iniciar servidor FTP
 ###Settings###
 CONFIGURATION=Ajustes de UIX
 Reboot=Reiniciar
@@ -236,6 +311,7 @@ General Settings=Ajustes generales
 Main Orb Style=Tipo de orbe principal
 Show Insignia=Mostrar Insignia
 Animate Main Menu=Menú principal de Animate
+Auto-Launch Media=Inicio automático de medios
 Use tHc ScreenSaver=Usar salvapantallas tHc
 UIX Settings Icon=Icono de ajustes de UIX
 Launcher Orb Icon=Icono del orbe del lanzador
@@ -291,7 +367,8 @@ RECENT=RECENTI
 Recent Titles=Titoli recenti
 Title=Titolo
 Titles=Titoli
-File Browser=
+File Browser=Esplora file
+Start FTP Server=Avvia server FTP
 ###Settings###
 CONFIGURATION=Impostazioni UIX
 Manage Saved Games=Gestisci i giochi salvati
@@ -315,6 +392,7 @@ General Settings=Impostazioni generali
 Main Orb Style=Stile principale dell'orbe
 Show Insignia=Mostra Insignia
 Animate Main Menu=Menu principale animato
+Auto-Launch Media=Avvio automatico dei media
 Use tHc ScreenSaver=Usa lo screensaver tHc
 UIX Settings Icon=Icona impostazioni UIX
 Launcher Orb Icon=Icona Orb del lanciatore
@@ -352,30 +430,168 @@ YX Button Action=Azione del pulsante YX
 Advanced Mode=Modalità avanzata
 
 [KOREAN]
-LAUNCHER=Launcher
+MEMORY=\uba54\ub9ac
+MUSIC=\ubb34\uc9c1
+LAUNCHER=\ub7ad\ucccb
 INSIGNIA=Insignia
-CONFIGURATION=UIX Settings
-ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
-AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
-AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
-AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
-AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
-INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
-SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
-POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
+CONFIGURATION=UIX \uc124\uc815
+ASSIGNED_QUICKLAUNCH=\uc120\ud0dd\ud55c \ud56d\ubaa9\uc774 QuickLaunch\uc5d0 \ud560\ub2f9\ub418\uc5c8\uc2b5\ub2c8\ub2e4
+AUTOLAUNCH_AUDIO_ASK=\n\uc74c\uc545 CD\uac00 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uc7ac\uc0dd\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
+AUTOLAUNCH_VIDEO_ASK=\nDVD \uc601\ud654\uac00 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uad6c\ucd95\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
+AUTOLAUNCH_TITLE_ASK=\nXbox \ud0c0\uc774\ud2c0\uc774 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uc2dc\uc791\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
+AUTOLAUNCH_UNKN_ASK=\n\uc54c \uc218 \uc5c6\ub294 \ub514\uc2a4\ud06c \ud0c0\uc785\uc774 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uc2dc\uc791\ud558\uace0 \ubbf8\ub9ac \ud655\uc778\ud574 \ubcf4\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
+INDEXING_PARTITION=\ud2b8\ub799 \ud328\ud134\uc758 \uc5f0\uc18c \ud30c\ud2f0\uc158\uc744 \uc778\ub371\uc2a4 \uc911\uc785\ub2c8\ub2e4. \uba87 \ucd08\uc815 \uac78\ub9b4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.\n\n\uae30\ub2e4\ub824\uc8fc\uc138\uc694...
+SETTINGS_CHANGED=\uc0c8 \uc124\uc815\uc744 \uc801\uc6a9\ud558\ub824\uba74 \ub2e4\uc2dc \ub85c\ub4dc\ud574\uc57c \ud569\ub2c8\ub2e4.\n\n\uc9c0\uae08 \ub2e4\uc2dc \ub85c\ub4dc\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
+POWER_OFF=Xbox\uc758 \uc804\uc0c1\ud569\ub2c8\ub2e4.\n\n\uacc4\uc18d\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
+###Launcher###
+REFRESH=\uc0c8\ub85c\uace0\uce68
+RECENT=\ucd5c\uadfc
+Recent Titles=\ucd5c\uadfc \ud0c0\uc774\ud2c0
+Title=\ud0c0\uc774\ud2c0
+Titles=\ud0c0\uc774\ud2c0
+File Browser=\ud30c\uc77c \ube0c\ub77c\uc6b0\uc800
+Start FTP Server=FTP \uc11c\ubc84 \uc2dc\uc791
+###Settings###
+CONFIGURATION=UIX \uc124\uc815
+Manage Saved Games=\uc800\uc7a5 \uac8c\uc784 \uad00\ub9ac
+Play Your Music=\uacc4\uc815\uc758 \uc74c\uc545 \uc7ac\uc0dd
+Launch a Title=\ud0c0\uc774\ud2c0 \uc2dc\uc791
+Configure UIX Settings=UIX \uc124\uc815 \uad6c\uc131
+Play Online=\uc628\ub77c\uc778 \uac8c\uc784
+Reboot Xbox=Xbox \ub2e4\uc2dc \uc2dc\uc791
+Shutdown Xbox=Xbox \uae30\uae30 \uc811\uafb8\uae30
+Reboot=\ub2e4\uc2dc \uc2dc\uc791
+Shutdown=\uae30\uae30 \uc811\uafb8\uae30
+###UIX Settings###
+TRUE=true
+FALSE=false
+NONE=none
+NOTHING=nothing
+Globe=\uc9c0\uad6c
+Console=\ucee4\ub110
+Stock=\uc2a4\ud1a1
+General Settings=\uc77c\ubc18 \uc124\uc815
+Main Orb Style=\uba54\uc778 \uc624\ube0c \uc2a4\ud0c0\uc77c
+Show Insignia=\uc778\uc2dc\ub2c8\uc544 \ud45c\uc2dc
+Animate Main Menu=\uba54\uc778 \uba54\ub274 \ub3d9\uc601\ud654
+Auto-Launch Media=\uc790\ub3d9 \uc2dc\uc791 \ubbf8\ub514\uc5b4
+Use tHc ScreenSaver=tHc \uc2a4\ud06c\ub9b0 \uc138\uc774\ubc84 \uc0ac\uc6a9
+UIX Settings Icon=UIX \uc124\uc815 \uc544\uc774\ucf58
+Launcher Orb Icon=\ub7ad\ucccb \uc624\ube0c \uc544\uc774\ucf58
+Use List Underlay=\ub9ac\uc2a4\ud2b8 \ubc31\uad00 \uc0ac\uc6a9
+Toggle Noisy Camera=\ub178\uc774\uc9c0 \uce74\uba54\ub77c \uc804\ud658
+Rescan Partitions=\ud30c\ud2f0\uc158 \ub2e4\uc2dc \uc0b0
+Main Menu=\uba54\uc778 \uba54\ub274 
+Launcher Menu=\ub7ad\ucccb \uba54\ub274 
+Show in Settings=\uc124\uc815\uc5d0 \ud45c\uc2dc
+Quick Launch=\ube60\ub978 \uc2dc\uc791
+Change Displayed Name of Titles=\ud0c0\uc774\ud2c0 \ud45c\uc2dc \uc774\ub984 \ubcc0\uacbd
+Change Title Names=\ud0c0\uc774\ud2c0 \uc774\ub984 \ubcc0\uacbd
+Main Menu Items=\uba54\uc778 \uba54\ub274 \ud56d\ubaa9
+Item 1 Title=1\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
+Item 1 Action=1\ubc88 \ud56d\ubaa9 \ud589\ub3d9
+Item 1 Path=1\ubc88 \ud56d\ubaa9 \uacbd\ub85c
+Item 2 Title=2\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
+Item 2 Action=2\ubc88 \ud56d\ubaa9 \ud589\ub3d9
+Item 2 Path=2\ubc88 \ud56d\ubaa9 \uacbd\ub85c
+Item 3 Title=3\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
+Item 3 Action=3\ubc88 \ud56d\ubaa9 \ud589\ub3d9
+Item 3 Path=3\ubc88 \ud56d\ubaa9 \uacbd\ub85c
+Item 4 Title=4\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
+Item 4 Action=4\ubc88 \ud56d\ubaa9 \ud589\ub3d9
+Item 4 Path=4\ubc88 \ud56d\ubaa9 \uacbd\ub85c
+Item 5 Title=5\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
+Item 5 Path=5\ubc88 \ud56d\ubaa9 \uacbd\ub85c
+Item 6 Title=6\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
+Item 6 Path=6\ubc88 \ud56d\ubaa9 \uacbd\ub85c
+Item 7 Title=7\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
+Item 7 Path=7\ubc88 \ud56d\ubaa9 \uacbd\ub85c
+Item 8 Title=8\ubc88 \ud56d\ubaa9 \uc81c\ubaa9
+Item 8 Path=8\ubc88 \ud56d\ubaa9 \uacbd\ub85c
+YX Button Action=YX \ubc84\ud2bc \ud589\ub3d9
+Advanced Mode=\uace0\uae09 \ubaa8\ub4dc
 
 [CHINESE]
-LAUNCHER=Launcher
+MEMORY=\u8a18\u61b6\u9ad4
+MUSIC=\u97f3\u6a02
+LAUNCHER=\u555f\u52d5\u5668
 INSIGNIA=Insignia
-CONFIGURATION=UIX Settings
-ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
-AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
-AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
-AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
-AUTOLAUNCH_UNKN_ASK=\nAn Unknown disk type has been inserted.\n\nDo you wish to try to launch it and see what happens??
-INDEXING_PARTITION=Indexing the harddisk's extended partitions. This could take several seconds.\n\nPlease Wait...
-SETTINGS_CHANGED=You will need to reboot before the new settings will take effect.\n\nWould you like to reboot now?
-POWER_OFF=This will power off the Xbox.\n\nDo you wish to continue?
+CONFIGURATION=UIX \u8a2d\u5b9a
+ASSIGNED_QUICKLAUNCH=\u5df2\u5c07\u9078\u5b9a\u9805\u76ee\u6307\u6a19\u81ea\u52d5\u555f\u52d5
+AUTOLAUNCH_AUDIO_ASK=\n\u5df2\u63d2\u5165\u97f3\u6a02CD\u3002\n\n\u60a8\u8981\u64ad\u653e\u55ce?
+AUTOLAUNCH_VIDEO_ASK=\n\u5df2\u63d2\u5165DVD\u96fb\u5f71\u3002\n\n\u60a8\u8981\u89c0\u770b\u55ce?
+AUTOLAUNCH_TITLE_ASK=\n\u5df2\u63d2\u5165Xbox\u904a\u6232\u3002\n\n\u60a8\u8981\u555f\u52d5\u55ce?
+AUTOLAUNCH_UNKN_ASK=\n\u5df2\u63d2\u5165\u672a\u77e5\u78c1\u789f\u985e\u578b\u3002\n\n\u60a8\u8981\u5617\u8a66\u555f\u52d5\u4f86\u770b\u770b\u55ce?
+INDEXING_PARTITION=\u6b63\u5728\u5c0d\u786c\u789f\u64f4\u5145\u5206\u5272\u9032\u884c\u7d22\u5f15\u3002\u9019\u53ef\u80fd\u9700\u8981\u6578\u79d2\u9418\u3002\n\n\u8acb\u7a0d\u5019...
+SETTINGS_CHANGED=\u60a8\u9700\u8981\u91cd\u65b0\u8f09\u5165\u624d\u80fd\u751f\u6548\u65b0\u8a2d\u5b9a\u3002\n\n\u60a8\u60f3\u73fe\u5728\u91cd\u65b0\u8f09\u5165\u55ce?
+POWER_OFF=\u9019\u5c07\u95dc\u9589Xbox\u3002\n\n\u60a8\u60f3\u7e7c\u7e8c\u55ce?
+###Launcher###
+REFRESH=\u91cd\u65b0\u6574\u7406
+RECENT=\u6700\u8fd1
+Recent Titles=\u6700\u8fd1\u9805\u76ee
+Title=\u9805\u76ee
+Titles=\u9805\u76ee\u5217\u8868
+File Browser=\u6a94\u6848\u700f\u89bd\u5668
+Start FTP Server=\u555f\u52d5FTP\u4f3a\u670d\u5668
+###Settings###
+CONFIGURATION=UIX \u8a2d\u5b9a
+Manage Saved Games=\u7ba1\u7406\u5132\u5b58\u904a\u6232
+Play Your Music=\u64ad\u653e\u60a8\u7684\u97f3\u6a02
+Launch a Title=\u555f\u52d5\u9805\u76ee
+Configure UIX Settings=\u8a2d\u5b9aUIX
+Play Online=\u7dda\u4e0a\u904a\u73a9
+Reboot Xbox=\u91cd\u555fXbox
+Shutdown Xbox=\u95dc\u6a5fXbox
+Reboot=\u91cd\u555f
+Shutdown=\u95dc\u6a5f
+###UIX Settings###
+TRUE=true
+FALSE=false
+NONE=none
+NOTHING=nothing
+Globe=\u5730\u7403
+Console=\u904a\u6232\u6a5f
+Stock=\u5df2\u9810\u8a2d
+General Settings=\u4e00\u822c\u8a2d\u5b9a
+Main Orb Style=\u4e3b\u6a19\u7c64\u98a8\u683c
+Show Insignia=\u986f\u793a\u7ae0\u7bc0
+Animate Main Menu=\u4e3b\u9078\u55ae\u52d5\u756b
+Auto-Launch Media=\u81ea\u52a8\u542f\u52a8\u5a92\u4f53
+Use tHc ScreenSaver=\u4f7f\u7528tHc\u4fdd\u7dad\u7a0b\u5f0f
+UIX Settings Icon=UIX\u8a2d\u5b9a\u5716\u793a
+Launcher Orb Icon=\u555f\u52d5\u5716\u793a
+Use List Underlay=\u4f7f\u7528\u5217\u8868\u80cc\u666f
+Toggle Noisy Camera=\u5207\u63db\u558a\u8072\u93e1\u982d
+Rescan Partitions=\u91cd\u65b0\u6383\u63cf\u5206\u5272
+Main Menu=\u4e3b\u9078\u55ae
+Launcher Menu=\u555f\u52d5\u9078\u55ae
+Show in Settings=\u8a2d\u5b9a\u4e2d\u986f\u793a
+Quick Launch=\u5feb\u901f\u555f\u52d5
+Change Displayed Name of Titles=\u8b8a\u66f4\u986f\u793a\u7684\u9805\u76ee\u540d
+Change Title Names=\u8b8a\u66f4\u9805\u76ee\u540d
+Main Menu Items=\u4e3b\u9078\u55ae\u9805\u76ee
+Item 1 Title=\u9805\u76ee 1 \u540d\u7a31
+Item 1 Action=\u9805\u76ee 1 \u52d5\u4f5c
+Item 1 Path=\u9805\u76ee 1 \u8def\u5f91
+Item 2 Title=\u9805\u76ee 2 \u540d\u7a31
+Item 2 Action=\u9805\u76ee 2 \u52d5\u4f5c
+Item 2 Path=\u9805\u76ee 2 \u8def\u5f91
+Item 3 Title=\u9805\u76ee 3 \u540d\u7a31
+Item 3 Action=\u9805\u76ee 3 \u52d5\u4f5c
+Item 3 Path=\u9805\u76ee 3 \u8def\u5f91
+Item 4 Title=\u9805\u76ee 4 \u540d\u7a31
+Item 4 Action=\u9805\u76ee 4 \u52d5\u4f5c
+Item 4 Path=\u9805\u76ee 4 \u8def\u5f91
+Item 5 Title=\u9805\u76ee 5 \u540d\u7a31
+Item 5 Path=\u9805\u76ee 5 \u8def\u5f91
+Item 6 Title=\u9805\u76ee 6 \u540d\u7a31
+Item 6 Path=\u9805\u76ee 6 \u8def\u5f91
+Item 7 Title=\u9805\u76ee 7 \u540d\u7a31
+Item 7 Path=\u9805\u76ee 7 \u8def\u5f91
+Item 8 Title=\u9805\u76ee 8 \u540d\u7a31
+Item 8 Path=\u9805\u76ee 8 \u8def\u5f91
+YX Button Action=YX\u9375\u52d5\u4f5c
+Advanced Mode=\u9ad8\u7d1a\u6a21\u5f0f
 
 [PORTUGUÊS]
 MEMORY=Memória
@@ -396,7 +612,8 @@ RECENT=RECENTES
 Recent Titles=Títulos Recentes
 Title=Título
 Titles=Títulos
-File Browser=
+File Browser=Navegador de arquivos
+Start FTP Server=Iniciar servidor FTP
 ###Settings###
 CONFIGURATION=Configurações UIX
 Manage Saved Games=Gerir Jogos Guardados
@@ -420,6 +637,7 @@ General Settings=Configurações Gerais
 Main Orb Style=Estilo Orbe Principal
 Show Insignia=Mostrar Insignia
 Animate Main Menu=Menu principal animado
+Auto-Launch Media=Início automático de mídia
 Use tHc ScreenSaver=Use protetor de ecrã tHc
 UIX Settings Icon=Ícone de Definições UIX
 Launcher Orb Icon=Ícone do Orbe do Lançador
