--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -28,7 +28,7 @@ MUSIC=\u30df\u30e5\u30fc\u30b8\u30c3\u30af
 LAUNCHER=\u30e9\u30f3\u30c1\u30e3\u30fc
 INSIGNIA=Insignia
 CONFIGURATION=UIX \u8a2d\u5b9a
-ASSIGNED_QUICKLAUNCH=\u9078\u629e\u3057\u305f\u30a2\u30a4\u30c6\u30e0\u3092QuickLaunch\u306b\u5272\u308a\u5f53\u3066\u307e\u3057\u305f
+ASSIGNED_QUICKLAUNCH=\u9078\u629e\u3055\u308c\u305f\u9805\u76ee\u306f\u6210\u529f\u306b\u5272\u308a\u5f53\u3066\u3089\u308c\u307e\u3057\u305f\u3002QuickLaunch
 AUTOLAUNCH_AUDIO_ASK=\n\u97f3\u697dCD\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u518d\u751f\u3057\u307e\u3059\u304b?
 AUTOLAUNCH_VIDEO_ASK=\nDVD\u6620\u753b\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u518d\u751f\u3057\u307e\u3059\u304b?
 AUTOLAUNCH_TITLE_ASK=\nXbox\u30bf\u30a4\u30c8\u30eb\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u8d77\u52d5\u3057\u307e\u3059\u304b?
@@ -65,7 +65,7 @@ Console=\u30b3\u30f3\u30bd\u30fc\u30eb
 Stock=\u30b9\u30c8\u30c3\u30af
 General Settings=\u5168\u822c\u8a2d\u5b9a
 Main Orb Style=\u30e1\u30a4\u30f3\u30aa\u30fc\u30d6\u30b9\u30bf\u30a4\u30eb
-Show Insignia=\u30a4\u30f3\u30b7\u30b0\u30cb\u30a2\u3092\u8868\u793a
+Show Insignia=\u8868\u793a Insignia
 Animate Main Menu=\u30e1\u30a4\u30f3\u30e1\u30cb\u30e5\u30fc\u306b\u52d5\u304d\u3092\u4ed8\u3051\u308b
 Auto-Launch Media=\u81ea\u52d5\u8d77\u52d5\u30e1\u30c7\u30a3\u30a2
 Use tHc ScreenSaver=tHc\u30b9\u30af\u30ea\u30fc\u30f3\u30bb\u30fc\u30d0\u30fc\u3092\u4f7f\u7528
@@ -435,7 +435,7 @@ MUSIC=\ubb34\uc9c1
 LAUNCHER=\ub7ad\ucccb
 INSIGNIA=Insignia
 CONFIGURATION=UIX \uc124\uc815
-ASSIGNED_QUICKLAUNCH=\uc120\ud0dd\ud55c \ud56d\ubaa9\uc774 QuickLaunch\uc5d0 \ud560\ub2f9\ub418\uc5c8\uc2b5\ub2c8\ub2e4
+ASSIGNED_QUICKLAUNCH=\uc120\ud0dd\ub41c \ud56d\ubaa9\uc740 \uc131\uacf5\uc801\uc73c\ub85c \ud560\ub2f9\ub418\uc5c8\uc2b5\ub2c8\ub2e4. QuickLaunch
 AUTOLAUNCH_AUDIO_ASK=\n\uc74c\uc545 CD\uac00 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uc7ac\uc0dd\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
 AUTOLAUNCH_VIDEO_ASK=\nDVD \uc601\ud654\uac00 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uad6c\ucd95\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
 AUTOLAUNCH_TITLE_ASK=\nXbox \ud0c0\uc774\ud2c0\uc774 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uc2dc\uc791\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
@@ -472,7 +472,7 @@ Console=\ucee4\ub110
 Stock=\uc2a4\ud1a1
 General Settings=\uc77c\ubc18 \uc124\uc815
 Main Orb Style=\uba54\uc778 \uc624\ube0c \uc2a4\ud0c0\uc77c
-Show Insignia=\uc778\uc2dc\ub2c8\uc544 \ud45c\uc2dc
+Show Insignia=Insignia \ud45c\uc2dc
 Animate Main Menu=\uba54\uc778 \uba54\ub274 \ub3d9\uc601\ud654
 Auto-Launch Media=\uc790\ub3d9 \uc2dc\uc791 \ubbf8\ub514\uc5b4
 Use tHc ScreenSaver=tHc \uc2a4\ud06c\ub9b0 \uc138\uc774\ubc84 \uc0ac\uc6a9
@@ -517,7 +517,7 @@ MUSIC=\u97f3\u6a02
 LAUNCHER=\u555f\u52d5\u5668
 INSIGNIA=Insignia
 CONFIGURATION=UIX \u8a2d\u5b9a
-ASSIGNED_QUICKLAUNCH=\u5df2\u5c07\u9078\u5b9a\u9805\u76ee\u6307\u6a19\u81ea\u52d5\u555f\u52d5
+ASSIGNED_QUICKLAUNCH=\u9009\u4e2d\u7684\u9879\u76ee\u5df2\u6210\u529f\u6307\u6d3e\u7ed9QuickLaunch
 AUTOLAUNCH_AUDIO_ASK=\n\u5df2\u63d2\u5165\u97f3\u6a02CD\u3002\n\n\u60a8\u8981\u64ad\u653e\u55ce?
 AUTOLAUNCH_VIDEO_ASK=\n\u5df2\u63d2\u5165DVD\u96fb\u5f71\u3002\n\n\u60a8\u8981\u89c0\u770b\u55ce?
 AUTOLAUNCH_TITLE_ASK=\n\u5df2\u63d2\u5165Xbox\u904a\u6232\u3002\n\n\u60a8\u8981\u555f\u52d5\u55ce?
@@ -554,7 +554,7 @@ Console=\u904a\u6232\u6a5f
 Stock=\u5df2\u9810\u8a2d
 General Settings=\u4e00\u822c\u8a2d\u5b9a
 Main Orb Style=\u4e3b\u6a19\u7c64\u98a8\u683c
-Show Insignia=\u986f\u793a\u7ae0\u7bc0
+Show Insignia=\u663e\u793a Insignia
 Animate Main Menu=\u4e3b\u9078\u55ae\u52d5\u756b
 Auto-Launch Media=\u81ea\u52a8\u542f\u52a8\u5a92\u4f53
 Use tHc ScreenSaver=\u4f7f\u7528tHc\u4fdd\u7dad\u7a0b\u5f0f
