--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -12,7 +12,7 @@ MUSIC=Music
 LAUNCHER=Launcher
 INSIGNIA=Insignia
 CONFIGURATION=UIX Settings
-ASSIGNED_QUICKLAUNCH=Selected item assigned to QuickLaunch
+ASSIGNED_QUICKLAUNCH=The selected item has been assigned as QuickLaunch
 AUTOLAUNCH_AUDIO_ASK=\nAn Audio CD has been inserted.\n\nDo you wish to play it?
 AUTOLAUNCH_VIDEO_ASK=\nA DVD movie has been inserted.\n\nDo you wish to watch it?
 AUTOLAUNCH_TITLE_ASK=\nAn Xbox title has been inserted.\n\nDo you wish to launch it?
@@ -28,7 +28,7 @@ MUSIC=\u30df\u30e5\u30fc\u30b8\u30c3\u30af
 LAUNCHER=\u30e9\u30f3\u30c1\u30e3\u30fc
 INSIGNIA=Insignia
 CONFIGURATION=UIX \u8a2d\u5b9a
-ASSIGNED_QUICKLAUNCH=\u9078\u629e\u3055\u308c\u305f\u9805\u76ee\u306f\u6210\u529f\u306b\u5272\u308a\u5f53\u3066\u3089\u308c\u307e\u3057\u305f\u3002QuickLaunch
+ASSIGNED_QUICKLAUNCH=\u9078\u629e\u3057\u305f\u9805\u76ee\u304c\u5272\u308a\u5f53\u3066\u3089\u308c\u307e\u3057\u305f\u3001QuickLaunch
 AUTOLAUNCH_AUDIO_ASK=\n\u97f3\u697dCD\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u518d\u751f\u3057\u307e\u3059\u304b?
 AUTOLAUNCH_VIDEO_ASK=\nDVD\u6620\u753b\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u518d\u751f\u3057\u307e\u3059\u304b?
 AUTOLAUNCH_TITLE_ASK=\nXbox\u30bf\u30a4\u30c8\u30eb\u304c\u633f\u5165\u3055\u308c\u307e\u3057\u305f\u3002\n\n\u8d77\u52d5\u3057\u307e\u3059\u304b?
@@ -435,7 +435,7 @@ MUSIC=\ubb34\uc9c1
 LAUNCHER=\ub7ad\ucccb
 INSIGNIA=Insignia
 CONFIGURATION=UIX \uc124\uc815
-ASSIGNED_QUICKLAUNCH=\uc120\ud0dd\ub41c \ud56d\ubaa9\uc740 \uc131\uacf5\uc801\uc73c\ub85c \ud560\ub2f9\ub418\uc5c8\uc2b5\ub2c8\ub2e4. QuickLaunch
+ASSIGNED_QUICKLAUNCH=\uC120\uD0DD\uD55C \uD56D\uBAA9\uC774 \uD560\uB2F9\uB418\uC5C8\uC2B5\uB2C8\uB2E4\u3001QuickLaunch
 AUTOLAUNCH_AUDIO_ASK=\n\uc74c\uc545 CD\uac00 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uc7ac\uc0dd\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
 AUTOLAUNCH_VIDEO_ASK=\nDVD \uc601\ud654\uac00 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uad6c\ucd95\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
 AUTOLAUNCH_TITLE_ASK=\nXbox \ud0c0\uc774\ud2c0\uc774 \uc0bd\uc785\ub418\uc5c8\uc2b5\ub2c8\ub2e4.\n\n\uc2dc\uc791\ud558\uc2dc\uaca0\uc2b5\ub2c8\uaca0\uc5b4?
@@ -517,80 +517,80 @@ MUSIC=\u97f3\u6a02
 LAUNCHER=\u555f\u52d5\u5668
 INSIGNIA=Insignia
 CONFIGURATION=UIX \u8a2d\u5b9a
-ASSIGNED_QUICKLAUNCH=\u9009\u4e2d\u7684\u9879\u76ee\u5df2\u6210\u529f\u6307\u6d3e\u7ed9QuickLaunch
-AUTOLAUNCH_AUDIO_ASK=\n\u5df2\u63d2\u5165\u97f3\u6a02CD\u3002\n\n\u60a8\u8981\u64ad\u653e\u55ce?
-AUTOLAUNCH_VIDEO_ASK=\n\u5df2\u63d2\u5165DVD\u96fb\u5f71\u3002\n\n\u60a8\u8981\u89c0\u770b\u55ce?
-AUTOLAUNCH_TITLE_ASK=\n\u5df2\u63d2\u5165Xbox\u904a\u6232\u3002\n\n\u60a8\u8981\u555f\u52d5\u55ce?
-AUTOLAUNCH_UNKN_ASK=\n\u5df2\u63d2\u5165\u672a\u77e5\u78c1\u789f\u985e\u578b\u3002\n\n\u60a8\u8981\u5617\u8a66\u555f\u52d5\u4f86\u770b\u770b\u55ce?
-INDEXING_PARTITION=\u6b63\u5728\u5c0d\u786c\u789f\u64f4\u5145\u5206\u5272\u9032\u884c\u7d22\u5f15\u3002\u9019\u53ef\u80fd\u9700\u8981\u6578\u79d2\u9418\u3002\n\n\u8acb\u7a0d\u5019...
-SETTINGS_CHANGED=\u60a8\u9700\u8981\u91cd\u65b0\u8f09\u5165\u624d\u80fd\u751f\u6548\u65b0\u8a2d\u5b9a\u3002\n\n\u60a8\u60f3\u73fe\u5728\u91cd\u65b0\u8f09\u5165\u55ce?
-POWER_OFF=\u9019\u5c07\u95dc\u9589Xbox\u3002\n\n\u60a8\u60f3\u7e7c\u7e8c\u55ce?
+ASSIGNED_QUICKLAUNCH=\u5df2\u5c07\u9078\u53d6\u9805\u76ee\u6307\u5b9a\u70baQuickLaunch
+AUTOLAUNCH_AUDIO_ASK=\n\u5df2\u63d2\u5165\u97f3\u6a02CD\u3002\n\n\u60a8\u60f3\u8981\u64ad\u653e\u55ce\uff1f
+AUTOLAUNCH_VIDEO_ASK=\n\u5df2\u63d2\u5165DVD\u96fb\u5f71\u3002\n\n\u60a8\u60f3\u8981\u89c0\u770b\u55ce\uff1f
+AUTOLAUNCH_TITLE_ASK=\n\u5df2\u63d2\u5165Xbox\u904a\u6232\u3002\n\n\u60a8\u60f3\u8981\u555f\u52d5\u55ce\uff1f
+AUTOLAUNCH_UNKN_ASK=\n\u5df2\u63d2\u5165\u672a\u77e5\u78c1\u789f\u985e\u578b\u3002\n\n\u60a8\u60f3\u5617\u8a66\u555f\u52d5\u770b\u770b\u6703\u767c\u751f\u4ec0\u9ebc\u55ce\uff1f\uff1f
+INDEXING_PARTITION=\u6b63\u5728\u7d22\u5f15\u786c\u789f\u7684\u64f4\u5145\u5206\u5340\u3002\u9019\u53ef\u80fd\u9700\u8981\u7b49\u5f85\u6578\u79d2\u3002\n\n\u8acb\u7a0d\u5f85...
+SETTINGS_CHANGED=\u60a8\u9700\u91cd\u65b0\u8f09\u5165\uff0c\u65b0\u8a2d\u5b9a\u624d\u6703\u751f\u6548\u3002\n\n\u60a8\u60f3\u8981\u73fe\u5728\u91cd\u65b0\u8f09\u5165\u55ce\uff1f
+POWER_OFF=\u9019\u5c07\u95dc\u6a5fXbox\u3002\n\n\u60a8\u60f3\u7e7c\u7e8c\u55ce\uff1f
 ###Launcher###
-REFRESH=\u91cd\u65b0\u6574\u7406
+REFRESH=\u5237\u65b0
 RECENT=\u6700\u8fd1
-Recent Titles=\u6700\u8fd1\u9805\u76ee
-Title=\u9805\u76ee
-Titles=\u9805\u76ee\u5217\u8868
+Recent Titles=\u6700\u8fd1\u904a\u6232
+Title=\u904a\u6232
+Titles=\u904a\u6232\u5217\u8868
 File Browser=\u6a94\u6848\u700f\u89bd\u5668
 Start FTP Server=\u555f\u52d5FTP\u4f3a\u670d\u5668
 ###Settings###
 CONFIGURATION=UIX \u8a2d\u5b9a
-Manage Saved Games=\u7ba1\u7406\u5132\u5b58\u904a\u6232
+Manage Saved Games=\u7ba1\u7406\u5b58\u6a94
 Play Your Music=\u64ad\u653e\u60a8\u7684\u97f3\u6a02
-Launch a Title=\u555f\u52d5\u9805\u76ee
-Configure UIX Settings=\u8a2d\u5b9aUIX
-Play Online=\u7dda\u4e0a\u904a\u73a9
+Launch a Title=\u555f\u52d5\u904a\u6232
+Configure UIX Settings=\u8a2d\u5b9aUIX\u914d\u7f6e
+Play Online=\u7db2\u8def\u904a\u73a9
 Reboot Xbox=\u91cd\u555fXbox
 Shutdown Xbox=\u95dc\u6a5fXbox
 Reboot=\u91cd\u555f
 Shutdown=\u95dc\u6a5f
 ###UIX Settings###
-TRUE=true
-FALSE=false
-NONE=none
-NOTHING=nothing
+TRUE=\u771f
+FALSE=\u5047
+NONE=\u7121
+NOTHING=\u7121
 Globe=\u5730\u7403
 Console=\u904a\u6232\u6a5f
-Stock=\u5df2\u9810\u8a2d
+Stock=\u539f\u88dd
 General Settings=\u4e00\u822c\u8a2d\u5b9a
-Main Orb Style=\u4e3b\u6a19\u7c64\u98a8\u683c
-Show Insignia=\u663e\u793a Insignia
+Main Orb Style=\u4e3b\u7403\u9ad4\u98a8\u683c
+Show Insignia=\u986f\u793aInsignia
 Animate Main Menu=\u4e3b\u9078\u55ae\u52d5\u756b
-Auto-Launch Media=\u81ea\u52a8\u542f\u52a8\u5a92\u4f53
-Use tHc ScreenSaver=\u4f7f\u7528tHc\u4fdd\u7dad\u7a0b\u5f0f
+Auto-Launch Media=\u81ea\u52d5\u555f\u52d5\u5a92\u9ad4
+Use tHc ScreenSaver=\u4f7f\u7528tHc\u4fdd\u8b77\u7a97
 UIX Settings Icon=UIX\u8a2d\u5b9a\u5716\u793a
 Launcher Orb Icon=\u555f\u52d5\u5716\u793a
 Use List Underlay=\u4f7f\u7528\u5217\u8868\u80cc\u666f
-Toggle Noisy Camera=\u5207\u63db\u558a\u8072\u93e1\u982d
-Rescan Partitions=\u91cd\u65b0\u6383\u63cf\u5206\u5272
+Toggle Noisy Camera=\u5207\u63db\u566a\u97f3\u76f8\u6a5f
+Rescan Partitions=\u91cd\u65b0\u6383\u63cf\u5340\u57df
 Main Menu=\u4e3b\u9078\u55ae
 Launcher Menu=\u555f\u52d5\u9078\u55ae
-Show in Settings=\u8a2d\u5b9a\u4e2d\u986f\u793a
+Show in Settings=\u8a2d\u5b9a\u986f\u793a
 Quick Launch=\u5feb\u901f\u555f\u52d5
-Change Displayed Name of Titles=\u8b8a\u66f4\u986f\u793a\u7684\u9805\u76ee\u540d
-Change Title Names=\u8b8a\u66f4\u9805\u76ee\u540d
+Change Displayed Name of Titles=\u8b8a\u66f4\u986f\u793a\u904a\u6232\u540d\u7a31
+Change Title Names=\u8b8a\u66f4\u904a\u6232\u540d\u7a31
 Main Menu Items=\u4e3b\u9078\u55ae\u9805\u76ee
-Item 1 Title=\u9805\u76ee 1 \u540d\u7a31
-Item 1 Action=\u9805\u76ee 1 \u52d5\u4f5c
-Item 1 Path=\u9805\u76ee 1 \u8def\u5f91
-Item 2 Title=\u9805\u76ee 2 \u540d\u7a31
-Item 2 Action=\u9805\u76ee 2 \u52d5\u4f5c
-Item 2 Path=\u9805\u76ee 2 \u8def\u5f91
-Item 3 Title=\u9805\u76ee 3 \u540d\u7a31
-Item 3 Action=\u9805\u76ee 3 \u52d5\u4f5c
-Item 3 Path=\u9805\u76ee 3 \u8def\u5f91
-Item 4 Title=\u9805\u76ee 4 \u540d\u7a31
-Item 4 Action=\u9805\u76ee 4 \u52d5\u4f5c
-Item 4 Path=\u9805\u76ee 4 \u8def\u5f91
-Item 5 Title=\u9805\u76ee 5 \u540d\u7a31
-Item 5 Path=\u9805\u76ee 5 \u8def\u5f91
-Item 6 Title=\u9805\u76ee 6 \u540d\u7a31
-Item 6 Path=\u9805\u76ee 6 \u8def\u5f91
-Item 7 Title=\u9805\u76ee 7 \u540d\u7a31
-Item 7 Path=\u9805\u76ee 7 \u8def\u5f91
-Item 8 Title=\u9805\u76ee 8 \u540d\u7a31
-Item 8 Path=\u9805\u76ee 8 \u8def\u5f91
-YX Button Action=YX\u9375\u52d5\u4f5c
+Item 1 Title=\u9805\u76ee1\u540d\u7a31
+Item 1 Action=\u9805\u76ee1\u64cd\u4f5c
+Item 1 Path=\u9805\u76ee1\u8def\u5f91
+Item 2 Title=\u9805\u76ee2\u540d\u7a31
+Item 2 Action=\u9805\u76ee2\u64cd\u4f5c
+Item 2 Path=\u9805\u76ee2\u8def\u5f91
+Item 3 Title=\u9805\u76ee3\u540d\u7a31
+Item 3 Action=\u9805\u76ee3\u64cd\u4f5c
+Item 3 Path=\u9805\u76ee3\u8def\u5f91
+Item 4 Title=\u9805\u76ee4\u540d\u7a31
+Item 4 Action=\u9805\u76ee4\u64cd\u4f5c
+Item 4 Path=\u9805\u76ee4\u8def\u5f91
+Item 5 Title=\u9805\u76ee5\u540d\u7a31
+Item 5 Path=\u9805\u76ee5\u8def\u5f91
+Item 6 Title=\u9805\u76ee6\u540d\u7a31
+Item 6 Path=\u9805\u76ee6\u8def\u5f91
+Item 7 Title=\u9805\u76ee7\u540d\u7a31
+Item 7 Path=\u9805\u76ee7\u8def\u5f91
+Item 8 Title=\u9805\u76ee8\u540d\u7a31
+Item 8 Path=\u9805\u76ee8\u8def\u5f91
+YX Button Action=YX\u6309\u9215\u64cd\u4f5c
 Advanced Mode=\u9ad8\u7d1a\u6a21\u5f0f
 
 [PORTUGUÊS]
