Integrated UIX Toolbox

--- a/Xip Source/UIX Configs/xlate.ini
+++ b/Xip Source/UIX Configs/xlate.ini
@@ -43,7 +43,7 @@ Recent Titles=\u6700\u8fd1\u306e\u30bf\u30a4\u30c8\u30eb
 Title=\u30bf\u30a4\u30c8\u30eb
 Titles=\u30bf\u30a4\u30c8\u30eb
 File Browser=\u30d5\u30a1\u30a4\u30eb\u30d6\u30e9\u30a6\u30b6
-Start FTP Server=FTP\u30b5\u30fc\u30d0\u30fc\u3092\u958b\u59cb
+Start UIX Toolbox=UIX Toolbox \u3092\u958b\u59cb 
 ###Settings###
 CONFIGURATION=UIX \u8a2d\u5b9a
 Manage Saved Games=\u30bb\u30fc\u30d6\u30c7\u30fc\u30bf\u306e\u7ba1\u7406
@@ -125,7 +125,7 @@ Recent Titles=Zuletzt gespielte Titel
 Title=Titel
 Titles=Titel
 File Browser=Dateimanager
-Start FTP Server=FTP-Server starten
+Start UIX Toolbox=Starten Sie UIX Toolbox 
 ###Settings###
 CONFIGURATION=UIX-Einstellungen
 Manage Saved Games=Gespeicherte Spiele
@@ -206,7 +206,7 @@ Recent Titles=Éléments récents
 Title=Élément
 Titles=Éléments
 File Browser=Explorateur de fichiers
-Start FTP Server=Démarrer le serveur FTP
+Start UIX Toolbox=Démarrer UIX Toolbox
 ###Settings###
 CONFIGURATION=Paramètres d'UIX
 Manage Saved Games=Gérer vos sauvegardes
@@ -287,7 +287,7 @@ Recent Titles=Elementos recientes
 Title=Título
 Titles=Títulos
 File Browser=Explorador de archivos
-Start FTP Server=Iniciar servidor FTP
+Start UIX Toolbox=Iniciar UIX Toolbox
 ###Settings###
 CONFIGURATION=Ajustes de UIX
 Reboot=Reiniciar
@@ -368,7 +368,7 @@ Recent Titles=Titoli recenti
 Title=Titolo
 Titles=Titoli
 File Browser=Esplora file
-Start FTP Server=Avvia server FTP
+Start UIX Toolbox=Avvia UIX Toolbox
 ###Settings###
 CONFIGURATION=Impostazioni UIX
 Manage Saved Games=Gestisci i giochi salvati
@@ -450,7 +450,7 @@ Recent Titles=\ucd5c\uadfc \ud0c0\uc774\ud2c0
 Title=\ud0c0\uc774\ud2c0
 Titles=\ud0c0\uc774\ud2c0
 File Browser=\ud30c\uc77c \ube0c\ub77c\uc6b0\uc800
-Start FTP Server=FTP \uc11c\ubc84 \uc2dc\uc791
+Start UIX Toolbox=UIX Toolbox \uC2DC\uC791 
 ###Settings###
 CONFIGURATION=UIX \uc124\uc815
 Manage Saved Games=\uc800\uc7a5 \uac8c\uc784 \uad00\ub9ac
@@ -532,7 +532,7 @@ Recent Titles=\u6700\u8fd1\u904a\u6232
 Title=\u904a\u6232
 Titles=\u904a\u6232\u5217\u8868
 File Browser=\u6a94\u6848\u700f\u89bd\u5668
-Start FTP Server=\u555f\u52d5FTP\u4f3a\u670d\u5668
+Start UIX Toolbox=\u555f\u52d5 UIX Toolbox
 ###Settings###
 CONFIGURATION=UIX \u8a2d\u5b9a
 Manage Saved Games=\u7ba1\u7406\u5b58\u6a94
@@ -613,7 +613,7 @@ Recent Titles=Títulos Recentes
 Title=Título
 Titles=Títulos
 File Browser=Navegador de arquivos
-Start FTP Server=Iniciar servidor FTP
+Start UIX Toolbox=Iniciar UIX Toolbox
 ###Settings###
 CONFIGURATION=Configurações UIX
 Manage Saved Games=Gerir Jogos Guardados
