Added support for colouring the Xonlinedash.xbe. Updated the Xboxdash 5960 Colourizer.zip an python script to use a UI making it simpler to use.
Updated the Build UIX Lite Skins tool with the new images for xonlinedash and also added the blood red skin so people can tinker with it.

Also added Milenkos script for setting colours via a UI, fixed up an improved.
It now works in a similar way to the above scrip allowing a base colour to be set. Currently only xboxdash.xbe

--- a/Tools/Colour Patcher/Source/skins/blood red.ini
+++ b/Tools/Colour Patcher/Source/skins/blood red.ini
@@ -23,3 +23,8 @@ egg_xboxgreen_sub=C9C9C9
 ; Description: OrangeNavType
 ; Colour type: RGB
 orangenavtype=C9C9C9
+; xonlinedash
+xonline_NavType=B1C9C9C9
+xonline_EggGlowOange_1=50E9E9E9
+xonline_EggGlowOange_2=E5E5E5
+xonline_dark_green_panels=0000
