--- a/Tools/Colour Patcher/Source/skins/blue.ini
+++ b/Tools/Colour Patcher/Source/skins/blue.ini
@@ -32,3 +32,8 @@ egg_xboxgreen_sub=888888
 ; Description: OrangeNavType
 ; Colour type: RGB
 orangenavtype=888888
+; xonlinedash
+xonline_NavType=B1888888
+xonline_EggGlowOange_1=50A9A9A9
+xonline_EggGlowOange_2=1972c9
+xonline_dark_green_panels=0000
