--- a/Tools/Colour Patcher/Source/skins/crystal.ini
+++ b/Tools/Colour Patcher/Source/skins/crystal.ini
@@ -26,3 +26,8 @@ panelbacking_04=414141
 ; Description: OrangeNavType
 ; Colour type: RGB
 orangenavtype=C9C9C9
+; xonlinedash
+xonline_NavType=B1C9C9C9
+xonline_EggGlowOange_1=4CA0B501
+xonline_EggGlowOange_2=1E7211
+xonline_dark_green_panels=0000
