--- a/Tools/Colour Patcher/Source/skins/stock.ini
+++ b/Tools/Colour Patcher/Source/skins/stock.ini
@@ -17,7 +17,7 @@ innerwall_01=1428D414
 innerwall_02=1414C000
 material_#1334=FF0b2000
 xboxgreendark=FF062100
-egg_xboxgreen_sub=8cc919
+egg_xboxgreen_sub=8CC919
 xboxgreen2=8BC818
 gamehilite33=DDD078
 nothing=808080
@@ -82,3 +82,72 @@ footer=9D6DC2
 livechrome=9D6DC2
 gamehilite=FFFFFF
 panelbacking=FF041400
+xonline_dark_green_panels=2909
+xonline_XBoxGreen=18C88B
+xonline_options_footer=9D6DC2
+xonline_float_unknown_2=6A
+xonline_float_unknown_3=AC
+xonline_NavType=B15DF9BD
+xonline_Material_#13=31AF46
+xonline_Pulse_3d_Trans=CCDCFF
+xonline_solid_green_1=2211
+xonline_solid_green2=0AC112
+xonline_solid_green_3=1C750A
+xonline_solid_green_4=3712
+xonline_flatsurfaces_back=0A14C000
+xonline_flatsurfaces_highlights=FFF3FF6B
+xonline_CellEgg/Transition=E4FEFFBC
+xonline_CellEgg/Pulse=FCFF00
+xonline_FlatSurfaces2sided3_1=14C000
+xonline_FlatSurfaces2sided3_2=C0F3FF6B
+xonline_IconParts=C0F3FF6B
+xonline_CellEgg/Parts=B2F3FF6B
+xonline_CellWallStructure_1=00FF12
+xonline_CellWallStructure_2=33BFFF6B
+xonline_GamePod=38F3FF6B
+xonline_InnerWall_02=777FFF6B
+xonline_InnerWall_01_1=1428D414
+xonline_InnerWall_01_2=7FF3FF6B
+xonline_metal_chrome_1=FFE5E5E5
+xonline_metal_chrome_2=E5E5E5
+xonline_Tubes=25076800
+xonline_Tubes_Hightlight=D7F2FA99
+xonline_Shell=C0F3FF6B
+xonline_FlatSrfc/PodParts_1=00FF12
+xonline_FlatSrfc/PodParts_2=33BFFF6B
+xonline_Cell_Light_1=00FF12
+xonline_Cell_Light_2=33BFFF6B
+xonline_dual_buttons_hightlight=C0F3FF6B
+xonline_Unknown_10=1414C000
+xonline_Unknown_11=FFF3FF6B
+xonline_Background=1014C000
+xonline_innerwall_01_transition=BB686F27
+xonline_Unknown_14=686F27
+xonline_Unknown_15=FFF80C00
+xonline_Unknown_16=201EFF00
+xonline_Unknown_17=FFA7EC6A
+xonline_EggGlowOange_1=4CE0800C
+xonline_EggGlowOange_2=C8640C
+xonline_FlatSurfacesOrange_1=0C584D2D
+xonline_FlatSurfacesOrange_2=ACC8992D
+xonline_Cell_Lighter_1=00FF12
+xonline_Cell_Lighter_2=E4BFFF6B
+xonline_FlatSurfaces_Tube_1=FF0C00
+xonline_FlatSurfaces_Tube_2=6BFFDE00
+xonline_Pulse_3d_1=800680
+xonline_Pulse_3d_2=6B7D6F7D
+xonline_Unknown_18=4006FF
+xonline_Unknown_19=6B7D6FFF
+xonline_Unknown_20=000CFF
+xonline_Unknown_21=6B00DEFF
+xonline_XBOX_Green_1=E4FEFFBC
+xonline_XBOX_Green_2=FCFF00
+xonline_Lensflare_Text_1=E4FE00BC
+xonline_Lensflare_Text_2=FC0000
+xonline_FlatSurfaces_wire_1=0A14C000
+xonline_FlatSurfaces_wire_2=FF339C3B
+xonline_grey_1=FF475352
+xonline_grey_2=475345
+xonline_grill_grey=FF404040
+xonline_green_falloff_1=FF163604
+xonline_green_falloff_2=FF000000
