--- a/Tools/Colour Patcher/Source/skins/purple.ini
+++ b/Tools/Colour Patcher/Source/skins/purple.ini
@@ -32,3 +32,8 @@ egg_xboxgreen_sub=C9C9C9
 ; Description: OrangeNavType
 ; Colour type: RGB
 orangenavtype=C9C9C9
+; xonlinedash
+xonline_NavType=B1C9C9C9
+xonline_EggGlowOange_1=50E9E9E9
+xonline_EggGlowOange_2=9c1aff
+xonline_dark_green_panels=0000
